[package]
name = "nuclei-feature-extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
rayon = "1.6.1"
clap = { version = "4.1.4", features = ["derive"] }
openslide = {version="0.2"}
image = "0.24"
tch = "0.11"
tch-utils = {git="https://github.com/oxabz/tch-utils.git"}
csv = "1.1"
itertools = "0.10.5"
struct-field-names-as-array = "0.1.4"
lazy_static = "1.4"

[patch.crates-io]
openslide = { git = "https://github.com/oxabz/openslide-rust.git", branch="send" }
