[package]
name = "nuclei-feature-extraction"
version = "0.1.0"
edition = "2021"


[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# IO
csv = "1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
clap = { version = "4.1.4", features = ["derive"] }
openslide = {version="0.2"}
log = "0.4"
# Processing and math
rayon = "1.6.1"
image = "0.24"
tch = "0.11"
tch-utils = {git="https://github.com/oxabz/tch-utils.git"}
# Misc
struct-field-names-as-array = "0.2"
lazy_static = "1.4"
pretty_env_logger = "0.4"

[patch.crates-io]
# Using a patched version of openslide-rust that makes it possible to send the openslide object between threads
openslide = { git = "https://github.com/oxabz/openslide-rust.git", branch="send" }
