[package]
name = "nuclei-feature-extraction"
version = "0.1.0"
edition = "2021"
default-run = "nuclei-feature-extraction"

[[bin]]
name = "nuclei-feature-extraction"
path = "src/main.rs"

[[bin]]
name = "filter-geojson"
path = "src/filter_geojson.rs"

# we need to add a dummy bin in docker to build dependencies first (see https://stackoverflow.com/questions/58473606/cache-rust-dependencies-with-docker-build)
# [[dummy placeholder]]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# IO
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1"
clap = { version = "4.1.4", features = ["derive"] }
openslide-rs = "1.2.0"
log = "0.4"
# Data structures
polars = { version = "0.29", features = ["json", "parquet", "ipc"] }
# Processing and math
rayon = "1.6.1"
image = "0.24"
tch = "0.11"
tch-utils = {git="https://github.com/oxabz/tch-utils.git", default-features = false, features=["image"]}
geometric-features = {git = "https://github.com/oxabz/geometric-features-rs.git"}
# Misc
lazy_static = "1.4"
pretty_env_logger = "0.4"
